Update old logic to use notificationEventId