@@ -15,7 +15,7 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.wrapper.Notificati
 import uk.gov.hmcts.reform.finrem.caseorchestration.notifications.notifiers.SendCorrespondenceEvent;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -30,87 +30,121 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigCo
 @Slf4j
 public class NotificationAuditService {
 
-    private final ObjectMapper objectMapper;
+    private static final String NOTIFICATION_EVENT_ID = "notificationEventId";
 
+    private final ObjectMapper objectMapper;
     private final ApplicationEventPublisher applicationEventPublisher;
 
-    /**
-     * Creates notification audit rows for the correspondence event.
-     * The correspondence process is simulated first so listeners can determine
-     * which parties would receive correspondence by email or post without sending it.
-     * One audit row is created per notification party, and each pending audit
-     * is stored for later sent-status updates.
-     *
-     * @param event     the correspondence event containing parties, case details, template and documents
-     * @param eventType the event triggering the notification, used for the eventId field
-     */
     public void createAuditsForCorrespondence(SendCorrespondenceEvent event,
                                               EventType eventType) {
+        FinremCaseData caseData = event.getCaseData();
+        NotificationAuditWrapper wrapper = caseData.getNotificationAuditWrapper();
+
+        String notificationEventId = UUID.randomUUID().toString();
+
+        wrapper.setNotificationEventId(notificationEventId);
+
+        event.setNotificationTrackerId(notificationEventId);
         event.setEventId(eventType.getCcdType());
         event.setSimulatingCorrespondence(true);
         applicationEventPublisher.publishEvent(event);
 
-        FinremCaseData caseData = event.getCaseData();
-        NotificationAuditWrapper wrapper = caseData.getNotificationAuditWrapper();
+        List<NotificationToBeSentCollectionItem> pending =
+            event.getNotificationAudits().stream()
+                .map(audit -> NotificationToBeSentCollectionItem.builder()
+                    .id(UUID.randomUUID())
+                    .value(audit)
+                    .build())
+                .toList();
 
-        List<NotificationToBeSentCollectionItem> pending = event.getNotificationAudits().stream()
-            .map(audit -> NotificationToBeSentCollectionItem.builder()
-                .id(UUID.randomUUID())
-                .value(audit)
-                .build())
-            .toList();
+        List<NotificationToBeSentCollectionItem> allPending = new ArrayList<>(
+            Optional.ofNullable(wrapper.getNotificationsToBeSent())
+                .orElseGet(List::of)
+        );
 
-        wrapper.setNotificationsToBeSent(pending);
+        allPending.addAll(pending);
+
+        wrapper.setNotificationsToBeSent(allPending);
     }
 
-    /**
-     * Updates the notification audit history after correspondence has been sent.
-     * The pending audits created during About To Submit are compared with the audits
-     * recorded during Submitted. Successfully sent notifications are already present
-     * with wasSent set to Yes. Any pending audit without a matching sent audit is added
-     * with its existing wasSent value of No. Audits are matched using the party,
-     * notification type and event ID.
-     * Existing audit history is preserved, the completed audits for the current event
-     * are appended, and the pending notifications collection is cleared.
-     * Returns an empty map when there are no pending notifications to process.
-     * @param sentEvent the correspondence event containing the successfully sent notification audits
-     * @return the CCD fields containing the updated audit history and cleared pending notifications
-     */
     public Map<String, Object> updateSentAuditsList(SendCorrespondenceEvent sentEvent) {
         FinremCaseData caseData = sentEvent.getCaseData();
         NotificationAuditWrapper wrapper = caseData.getNotificationAuditWrapper();
 
-        List<NotificationAudit> audits = sentEvent.getNotificationAudits();
-        List<NotificationToBeSentCollectionItem> pending = wrapper.getNotificationsToBeSent();
+        String currentNotificationEventId = wrapper.getNotificationEventId();
 
-        if (pending == null || pending.isEmpty()) {
-            return Collections.emptyMap();
+        if (currentNotificationEventId == null) {
+            log.warn("No notificationEventId found when updating notification audits");
+            return Map.of();
         }
 
-        combinePendingAndSentAudits(pending, audits);
+        List<NotificationToBeSentCollectionItem> pending =
+            Optional.ofNullable(wrapper.getNotificationsToBeSent())
+                .orElseGet(List::of);
 
-        List<NotificationAuditCollectionItem> auditItems = new ArrayList<>(
-
-            Optional.ofNullable(wrapper.getNotificationsAudits())
-                .orElseGet(List::of)
-                .stream()
+        /*
+         * Only process pending notifications belonging to this event execution.
+         */
+        List<NotificationToBeSentCollectionItem> currentEventPending =
+            pending.stream()
                 .filter(Objects::nonNull)
                 .filter(item -> item.getValue() != null)
-                .toList()
+                .filter(item -> Objects.equals(
+                    currentNotificationEventId,
+                    item.getValue().getNotificationTrackerId()
+                ))
+                .toList();
+
+        /*
+         * Keep pending notifications belonging to previous event executions.
+         */
+        List<NotificationToBeSentCollectionItem> remainingPending =
+            pending.stream()
+                .filter(Objects::nonNull)
+                .filter(item -> item.getValue() == null
+                    || !Objects.equals(
+                    currentNotificationEventId,
+                    item.getValue().getNotificationTrackerId()
+                ))
+                .toList();
+
+        List<NotificationAudit> audits = new ArrayList<>(
+            Optional.ofNullable(sentEvent.getNotificationAudits())
+                .orElseGet(List::of)
+        );
+
+        combinePendingAndSentAudits(currentEventPending, audits);
+
+        /*
+         * Preserve existing permanent audit history.
+         */
+        List<NotificationAuditCollectionItem> auditItems = new ArrayList<>(
+            Optional.ofNullable(wrapper.getNotificationsAudits())
+                .orElseGet(List::of)
         );
 
         audits.stream()
-            .filter(Objects::nonNull)
             .map(audit -> NotificationAuditCollectionItem.builder()
                 .id(UUID.randomUUID())
                 .value(audit)
                 .build())
             .forEach(auditItems::add);
 
-        return Map.of(
-            NOTIFICATIONS_AUDITS, objectMapper.convertValue(auditItems, List.class),
-            NOTIFICATIONS_TO_BE_SENT, List.of()
+        Map<String, Object> updatedFields = new HashMap<>();
+
+        updatedFields.put(
+            NOTIFICATIONS_AUDITS,
+            objectMapper.convertValue(auditItems, List.class)
         );
+
+        updatedFields.put(
+            NOTIFICATIONS_TO_BE_SENT,
+            objectMapper.convertValue(remainingPending, List.class)
+        );
+
+        updatedFields.put(NOTIFICATION_EVENT_ID, null);
+
+        return updatedFields;
     }
 
     private void combinePendingAndSentAudits(
@@ -119,7 +153,6 @@ public class NotificationAuditService {
     ) {
         pending.stream()
             .map(NotificationToBeSentCollectionItem::getValue)
-            .filter(Objects::nonNull)
             .forEach(pendingAudit ->
                 audits.stream()
                     .filter(sentAudit -> isSameNotification(pendingAudit, sentAudit))
@@ -135,6 +168,9 @@ public class NotificationAuditService {
                                        NotificationAudit actual) {
         return Objects.equals(expected.getParty(), actual.getParty())
             && Objects.equals(expected.getType(), actual.getType())
-            && Objects.equals(expected.getEventId(), actual.getEventId());
+            && Objects.equals(
+            expected.getNotificationTrackerId(),
+            actual.getNotificationTrackerId()
+        );
     }
 }
